# prompt-decorators

./: .cursorrules  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  REGISTRY_IMPLEMENTATION_PLAN.md  SPEC.md  generate_all_tests.py  generate_decorators.py  generate_docs.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py  sitemap.xml  test_generation_sample.py  validate_decorators.py  validate_registry.py
.cursor/rules/: 000-cursor-rules.mdc  001-emoji-communication.mdc  001-generated-files.mdc  050-careful-code-modification.mdc  060-coding-patterns.mdc  070-workflow-preferences.mdc  401-code-generators.mdc  900-software-dev-decorators.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  deploy-docs.yml  docs.yml  documentation.yml  publish.yml
DECORATOR_REGISTRY/: index.html
DOCSTRING_STANDARDS/: index.html
DOCS_README/: index.html
api/: index.html
api/core/: index.html
api/decorators/: index.html
api/modules/: index.html
arch_intent_to_decorator/: index.html
architecture/: index.html
claude-code-plugin/: README.md  VENDORING.md
claude-code-plugin/.claude-plugin/: plugin.json
code_quality_integration/: index.html
compatibility/: index.html
concepts/: index.html
config/: model_capabilities.json
contributing/: index.html
creating_decorators/: index.html
decorators/: index.html
demo/: .env.sample  README.md  __init__.py  dynamic_openai_demo.py  index.html  main.py  openai_demo.py  requirements.txt
development/: index.html
development_guide/: index.html
docs/: DECORATOR_REGISTRY.md  DOCSTRING_STANDARDS.md  DOCS_README.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE5_COMPLETION_PLAN.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_FINAL_STEPS.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_PROGRESS_SUMMARY.md  README.md  architecture.md  code_quality_integration.md  compatibility.md  concepts.md  contributing.md  creating_decorators.md  development.md  development_guide.md  docstring_improvement_plan.md  documentation_checklist.md  documentation_workflow.md  extensions.md  faq.md  generate_docs.py  glossary.md  implementation-status.md  index.md  installation.md  mkdocs_enhancement_plan.md  navigation.md  prompt-decorators-specification-v1.0.md  quickstart.md  requirements.txt  roadmap.md  troubleshooting.md  type_annotation_improvements.md  validator_tool.md  workflow-rules.md
docstring_improvement_plan/: index.html
documentation_checklist/: index.html
documentation_workflow/: index.html
examples/: README.md  claude_desktop_integration.py  decorator_demo.py  dynamic_decorators.py  dynamic_decorators_example.py  mcp_client_example.py  mcp_integration_example.py  model_detection.py  model_specific_decorator.py  plugin_demo.py  register_all_decorators.py  telemetry_demo.py  test_decorator_registry.py  test_generated_decorators.py  use_registered_decorators.py
examples/domain_extensions/finance_decorators/: README.md  __init__.py  decorators.py  finance-decorators-package.json  pyproject.toml  setup.py
examples/domain_extensions/finance_decorators/registry_extensions/: finance_decorators.json
examples/domain_extensions/finance_decorators/tests/: test_finance_decorators.py
examples/python/: README.md  debate_decorator_example.py  pyproject.toml
examples/python/prompt_decorators/: __init__.py  example.py  models.py  validator.py
examples/python/tests/: test_decorators.py
extensions/: index.html
extensions/core/: README.md  install.py  package.json  pyproject.toml  pytest.ini  python_implementation.py  setup.py
extensions/core/decorators/: output-format.json  reasoning.json  step-by-step.json  tone.json  version.json
extensions/core/examples/: basic.md  combined.md  integration.md
extensions/core/prompt_decorators_core/: __init__.py  api.py  cli.py  decorators.py  example.py  utils.py
extensions/core/tests/: test_api.py  test_decorators.py  test_utils.py  validate_package.py
faq/: index.html
glossary/: index.html
ideas/: intent_to_decorator.md
implementation-status/: index.html
installation/: index.html
integrations/: index.html
mkdocs_enhancement_plan/: index.html
navigation/: index.html
prd_intent_to_decorator/: index.html
project_summaries/: index.html
prompt-decorators-specification-v1.0/: index.html
prompt_decorators/: __init__.py  __main__.py  config.py  dynamic_decorators_module.py
quickstart/: index.html
registry/: IMPLEMENTATION_PLAN.md  decorator-template.json
roadmap/: index.html
schemas/: README.md  api-request.schema.json  decorator.schema.json  extension-package.schema.json  registry-entry.schema.json  simplified-decorator.schema.yaml
scripts/: README.md  audit_templates.py  bump_version.py  check_demo_types.py  check_docstrings.py  check_mkdocs_plugins.py  copy_registry.py  debug_transform.py  dynamic_registry_tools.py  enhance_doc_generator.py  fix_common_issues.py  generate_api_docs.py  generate_tests.py  prepare_build.py  prompt_validator.py  registry_tools.py  release.py  run_tests.py  setup_pre_commit.py  setup_registry.py  standardize_docstrings.py  standardize_imports.py  test_dynamic_integration.py  test_yaml_to_schema.py  validate.py  validate_decorators.py  validate_registry.py  verify_and_enhance_docs.py  verify_awesome_pages.py  verify_build.py  verify_documentation.py  yaml_to_schema_README.md  yaml_to_schema_converter.py
search/: search_index.json
spike/: SPIKE_FINDINGS.md
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_decorator_behavior.py  test_decorator_compatibility.py  test_dynamic_decorators.py  test_dynamic_decorators_module.py  test_enum_handling.py  test_transformation_templates.py
troubleshooting/: index.html
type_annotation_improvements/: index.html
validator_tool/: index.html
workflow-rules/: index.html
xnotes/: 801-workflow-agile.mdc  902-arch-template.mdc  903-story-template.mdc  git-push-command.md
(+1922 files in other folders)
