[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203, W503

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
strict_optional = True

[mypy.plugins.numpy.random]
implicit_reexport = True

[mypy-tests.*]
disallow_untyped_defs = False
disallow_incomplete_defs = False

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*
addopts = --cov=prompt_decorators --cov-report=term-missing --cov-report=xml

[coverage:run]
source = prompt_decorators
omit = 
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[isort]
profile = black
line_length = 100
known_first_party = prompt_decorators
known_third_party = pytest,numpy,pandas 