[tool.poetry]
name = "prompt-decorators"
version = "0.1.0"
description = "Reference implementation of the Prompt Decorators specification"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "prompt_decorators"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
jsonschema = "^4.21.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
aiohttp = "^3.9.3"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 