[tool.poetry]
name = "prompt-decorators-core"
version = "1.0.0"
description = "Python implementation of the Prompt Decorators Core extension"
authors = ["Prompt Decorators Team <info@promptdecorators.org>"]
readme = "README.md"
license = "Apache 2.0"
repository = "https://github.com/prompt-decorators/extensions"
keywords = ["prompt", "decorators", "ai", "llm", "prompt-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "prompt_decorators_core" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.284"
mypy = "^1.5.1"

[tool.poetry.scripts]
prompt-decorators = "prompt_decorators_core.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "W", "N", "B", "C4", "UP", "ANN", "D", "T20"]
ignore = ["ANN101", "D203", "D213"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "D"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false 