[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-decorators"
version = "1.0.0"
description = "Domain-specific prompt decorators for financial applications"
readme = "README.md"
authors = [
    {name = "Finance AI Team", email = "finance@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["prompt-engineering", "finance", "ai", "llm", "prompt-decorators"]
dependencies = [
    "prompt-decorators>=1.0.0",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/yourusername/finance-decorators"
"Bug Tracker" = "https://github.com/yourusername/finance-decorators/issues"
